--- a/faq.html
+++ b/faq.html
@@ -17,6 +17,20 @@
 	<body>
 		<h1>Veelgestelde vragen</h1>
 
+		<details open>
+			<summary>Wat is frontend development?</summary>
+			Een frontend developer ontwerpt en bouwt websites in HTML, CSS en JavaScript. Deze frontend talen leer je bij ons, je hebt dus geen voorkennis nodig.
+		</details>
+
+		<details>
+			<summary>Wat is frontend development?</summary>
+			Een frontend developer ontwerpt en bouwt websites in HTML, CSS en JavaScript. Deze frontend talen leer je bij ons, je hebt dus geen voorkennis nodig.
+		</details>
+
+		<details>
+			<summary>Wat is frontend development?</summary>
+			Een frontend developer ontwerpt en bouwt websites in HTML, CSS en JavaScript. Deze frontend talen leer je bij ons, je hebt dus geen voorkennis nodig.
+		</details>
 
 		<!-- Content (waar nog wat HTML omheen moet 😄):
 		Wat is frontend development?
