--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,37 @@
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 		<link href="assets/styles.css" rel="stylesheet">
 		<style>
+			h1 {
+				margin: 1rem;
+			}
+
+			details {
+				border: solid;
+				border-radius: 10px;
+				padding: 16px;
+				margin: 1rem;
+				max-width: 36rem;
+			}
+
+			#details-1:open {
+				background-color: rgb(196, 95, 255);
+				border: none;
+			}
+
+			#details-2:open {
+				background-color: rgb(95, 255, 231);
+				border: none;
+			}
+
+			#details-3:open {
+				background-color: rgb(255, 228, 95);
+				border: none;
+			}
+
+			summary {
+				font-weight: 700;
+			}
+
 			/* Schrijf hier gewoon je CSS voor dit component */
 
 			/* Hint: Dit component kun je volledig met HTML en CSS bouwen */
@@ -17,20 +48,22 @@
 	<body>
 		<h1>Veelgestelde vragen</h1>
 
-		<details open>
-			<summary>Wat is frontend development?</summary>
-			Een frontend developer ontwerpt en bouwt websites in HTML, CSS en JavaScript. Deze frontend talen leer je bij ons, je hebt dus geen voorkennis nodig.
+		<details id="details-1" open>
+			<summary>Wat is frontend development?</summary> 
+			<p>Een frontend developer ontwerpt en bouwt websites in HTML, CSS en JavaScript. Deze frontend talen leer je bij ons, je hebt dus geen voorkennis nodig.</p>
 		</details>
 
-		<details>
-			<summary>Wat is frontend development?</summary>
-			Een frontend developer ontwerpt en bouwt websites in HTML, CSS en JavaScript. Deze frontend talen leer je bij ons, je hebt dus geen voorkennis nodig.
+		<details id="details-2">
+			<summary>Moet ik al kunnen coderen?</summary>
+			<p>Nee, je hebt helemaal geen voorkennis nodig om te beginnen aan deze opleiding, we kunnen je alles leren! Als je wel al voorkennis hebt, is dat alleen maar goed, dan kunnen we je helpen je skills te verbeteren en te verdiepen in de stof.</p>
 		</details>
 
-		<details>
-			<summary>Wat is frontend development?</summary>
-			Een frontend developer ontwerpt en bouwt websites in HTML, CSS en JavaScript. Deze frontend talen leer je bij ons, je hebt dus geen voorkennis nodig.
-		</details>
+		<details id="details-3">
+			<summary>Wat is een Associate Degree?</summary>
+			<p>Een Associate degree-opleiding is een tweejarige hbo-opleiding op niveau 5. Een Ad slaat een brug tussen het mbo-4 (niveau 4) en een hbo-bachelor (niveau 6). Met een Associate degree kies je voor een praktijkgerichte hbo-opleiding; je wordt opgeleid voor een beroep dat aansluit bij de praktijk. In dit geval word je opgeleid tot ‘frontend designer/developer' of kortweg ‘frontender’. Frontenders ontwerpen en maken interactieve, toegankelijke toepassingen voor het web. Frontenders werken binnen het gebied van software development, interactieontwerp en digitaal visueel ontwerp.
+
+				<p>Na afronding van deze tweejarige hbo-opleiding, krijg je een wettelijk erkend hbo-diploma met de graad Associate degree. Met dit Ad-diploma kun je direct aan de slag in het werkveld of doorstromen naar de bacheloropleiding Communication and Multimedia Design (CMD).</p>
+			</details></p>
 
 		<!-- Content (waar nog wat HTML omheen moet 😄):
 		Wat is frontend development?
