--- a/faq.html
+++ b/faq.html
@@ -12,15 +12,19 @@
 			}
 
 			details {
-				border: solid;
-				border-radius: 10px;
-				padding: 16px;
-				margin: 1rem;
-				max-width: 36rem;
+				margin: 1rem;	
 			}
 
-			#details-1:open {
-				background-color: rgb(196, 95, 255);
+			details:first-of-type summary::marker{
+				content: "+ ";
+			}
+
+			details[open]:first-of-type summary::marker {
+				content: "- ";
+				transform: rotate(45deg)
+			}
+
+			/* #details-1:open {
 				border: none;
 			}
 
@@ -32,10 +36,29 @@
 			#details-3:open {
 				background-color: rgb(255, 228, 95);
 				border: none;
-			}
+			} */
 
 			summary {
 				font-weight: 700;
+				max-width: 20rem;
+				padding: 16px;
+				border-radius: 10px;
+				border: solid;
+			}
+
+			details[open] summary::after {
+				background-color: rgb(196, 95, 255);
+				border-radius: 10px 10px 0px 0px;
+				border: none;
+			}
+
+			p {
+				max-width: 36rem;
+				background-color: rgb(196, 95, 255);
+				padding: 16px;
+				border-radius: 0px 10px 10px 10px;
+				margin-top: 0;
+				margin-bottom: 0;
 			}
 
 			/* Schrijf hier gewoon je CSS voor dit component */
@@ -60,10 +83,9 @@
 
 		<details id="details-3">
 			<summary>Wat is een Associate Degree?</summary>
-			<p>Een Associate degree-opleiding is een tweejarige hbo-opleiding op niveau 5. Een Ad slaat een brug tussen het mbo-4 (niveau 4) en een hbo-bachelor (niveau 6). Met een Associate degree kies je voor een praktijkgerichte hbo-opleiding; je wordt opgeleid voor een beroep dat aansluit bij de praktijk. In dit geval word je opgeleid tot ‘frontend designer/developer' of kortweg ‘frontender’. Frontenders ontwerpen en maken interactieve, toegankelijke toepassingen voor het web. Frontenders werken binnen het gebied van software development, interactieontwerp en digitaal visueel ontwerp.
-
-				<p>Na afronding van deze tweejarige hbo-opleiding, krijg je een wettelijk erkend hbo-diploma met de graad Associate degree. Met dit Ad-diploma kun je direct aan de slag in het werkveld of doorstromen naar de bacheloropleiding Communication and Multimedia Design (CMD).</p>
-			</details></p>
+			<p>Een Associate degree-opleiding is een tweejarige hbo-opleiding op niveau 5. Een Ad slaat een brug tussen het mbo-4 (niveau 4) en een hbo-bachelor (niveau 6). Met een Associate degree kies je voor een praktijkgerichte hbo-opleiding; je wordt opgeleid voor een beroep dat aansluit bij de praktijk. In dit geval word je opgeleid tot ‘frontend designer/developer' of kortweg ‘frontender’. Frontenders ontwerpen en maken interactieve, toegankelijke toepassingen voor het web. Frontenders werken binnen het gebied van software development, interactieontwerp en digitaal visueel ontwerp. <br>
+				Na afronding van deze tweejarige hbo-opleiding, krijg je een wettelijk erkend hbo-diploma met de graad Associate degree. Met dit Ad-diploma kun je direct aan de slag in het werkveld of doorstromen naar de bacheloropleiding Communication and Multimedia Design (CMD).</p>
+			</details>
 
 		<!-- Content (waar nog wat HTML omheen moet 😄):
 		Wat is frontend development?
